1. test findbyIdnotexist 2. collect(Collectors.toList()) difference between toList() (available since 16 and unmodified), the former returns an arrayList.